<resources>
    <string name="app_name" translatable="false">MobileRayTracer</string>
    <string name="time" translatable="false">Time</string>
    <string name="render" translatable="false">Render</string>
    <string name="radioButton" translatable="false">RadioButton</string>
    <string name="cornell" translatable="false">Cornell</string>
    <string name="spheres" translatable="false">Spheres</string>
    <string name="noShadows" translatable="false">NoShadows</string>
    <string name="whitted" translatable="false">Whitted</string>
    <string name="scene" translatable="false">Scene</string>
    <string name="shader" translatable="false">Shader</string>
    <string name="sampler" translatable="false">Sampler</string>
    <string name="numThreads" translatable="false">#Threads</string>
    <string name="numSamples" translatable="false">#Samples</string>
    <string name="textView" translatable="false">TextView</string>
</resources>