<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/activity_main"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context="com.example.puscas.mobileraytracer.MainActivity">

    <view
        android:id="@+id/viewDraw"
        class="com.example.puscas.mobileraytracer.DrawView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/timeText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/renderButton"
        android:layout_marginBottom="19dp"
        android:elevation="0dp"
        tools:targetApi="lollipop"/>

    <TextView
        android:id="@+id/timeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/time"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="18sp"/>

    <RadioGroup
        android:id="@+id/radioGroupScene"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioCornell"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="120dp"
            android:onClick="onSceneRadioButtonClicked"
            android:text="@string/cornell"/>

        <RadioButton
            android:id="@+id/radioSpheres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onSceneRadioButtonClicked"
            android:text="@string/spheres"
            />

    </RadioGroup>

    <RadioGroup
        android:id="@+id/radioGroupShader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/radioGroupScene"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioNoShadows"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="120dp"
            android:onClick="onShaderRadioButtonClicked"
            android:text="@string/noShadows"/>

        <RadioButton
            android:id="@+id/radioWhitted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onShaderRadioButtonClicked"
            android:text="@string/whitted"
            />

    </RadioGroup>

    <Button
        android:id="@+id/renderButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/radioGroupShader"
        android:onClick="startRender"
        android:text="@string/render"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignBottom="@+id/radioGroupShader"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:layout_toEndOf="@+id/radioGroupScene"
        android:layout_toRightOf="@+id/radioGroupScene">

        <NumberPicker
            android:id="@+id/pickerThreads"
            android:layout_width="32dp"
            android:layout_height="60dp"
            android:layout_marginLeft="54dp"
            android:layout_marginStart="54dp"/>

        <TextView
            android:id="@+id/textViewNumThreads"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="19dp"
            android:text="@string/numThreads"
            android:textIsSelectable="false"
            tools:ignore="RelativeOverlap"/>
    </FrameLayout>


</RelativeLayout>